--- a/docs/_includes/header.html
+++ b/docs/_includes/header.html
@@ -5,10 +5,10 @@
 		</div>
 		<div class="top-bar-right">
 			<ul class="menu">
-				<li><a href="/getting-started">Getting Started</a></li>
-				<li><a href="/tags">Tags</a></li>
-				<li><a href="/models">Models</a></li>
-				<li><a href="/filters">Filters</a></li>
+				<li><a href="getting-started">Getting Started</a></li>
+				<li><a href="tags">Tags</a></li>
+				<li><a href="models">Models</a></li>
+				<li><a href="filters">Filters</a></li>
 			</ul>
 	  	</div>
   	</div>
