--- a/docs/_includes/scripts.html
+++ b/docs/_includes/scripts.html
@@ -1,1 +1,2 @@
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/foundation/6.3.0/css/foundation.min.css" />
+<link rel="stylesheet" href="{{ site.baseurl }}/css/app.css" />
