--- a/docs/_layouts/home.html
+++ b/docs/_layouts/home.html
@@ -10,10 +10,101 @@ layout: home
 
 	{% include header.html %}
 
+	<div class="lightbg">
+		<div class="row column text-center">
+			<h1>{% raw %}<span>{{</span>  Liquid for <strong>everyone</strong>  <span>}}</span>{% endraw %}</h1>
+			<p>With Liquid you can create a bespoke eCommerce solution.</p>
+		</div>
+	</div>
+
+	<div class="row column text-center">
+		<h2>What is Liquid?</h2>
+		<p>Liquid is a templating language. This means that we can access data from our shop (e.g product title, collection description, product images or blog posts) and output that directly to our templates. One of the main benefits is that we don't need to have any knowledge of what that data is, wejust need to know which variables we have access to in each template.</p>
+	</div>
+
+	<div class="row">
+		<div class="column medium-6">
+			<h3>Getting Started</h3>
+			<p>Lorem ipsum dolor sit amet, consectetur adipis cing elitnc tempor egestas lacus nec porttitor. Aliquam quam leo, vehicula ac eros ut, faucibus bibendum nibh.</p>
+			<p><a class="button">Get Started with Liquid</a></p>
+		</div>
+		<div class="column medium-6">
+			<h3>Documents</h3>
+			<p>Lorem ipsum dolor sit amet, consectetur adipis cing elitnc tempor egestas lacus nec porttitor. Aliquam quam leo, vehicula ac eros ut, faucibus bibendum nibh.</p>
+			<p><a class="button">View our Liquid Docs</a></p>
+		</div>
+	</div>
+
+	<div class="row column text-center">
+		<h2>Building your eCommerce Solution</h2>
+		<p>Morbi metus mauris, aliquam nec pellentesque mattis, luctus eu mauristiam convallis justo ligula.</p>
+	</div>
+
+	<div class="row">
+		<div class="column medium-4">
+			<h3>Tags</h3>
+			<p>Liquid tags are used to tell the template what to do. You can control if code gets executed, repeatedly run blocks of code and create newvariables.</p>
+		</div>
+		<div class="column medium-4">
+			<h3>Models</h3>
+			<p>Liquid models (or objects) contain attributes to output dynamic content on the page. Liquid models are also often referred to as Liquid variables.</p>
+		</div>	
+		<div class="column medium-4">
+			<h3>Filters</h3>
+			<p>Liquid filters are simple methods that modify the output of numbers, strings, variables and objects. </p>
+		</div>				
+	</div>	
+
+	<div class="row column text-center">
+		<h2>Discuss Liquid with (us/others)</h2>
+		<p>Morbi metus mauris, aliquam nec pellentesque mattis, luctus eu mauristiam convallis justo ligula.</p>
+	</div>
+
+	<div class="row">
+		<div class="column medium-6">
+			<h3>Donec nulla velit, tempor ut velit quis</h3>
+			<p>Duis vestibulum fermentum nibh. Morbi finibus dui necmas tincidunt, id ultricies ex sollicitudin. Donec nulla velit, tem por ut velit quis, placerat tincidunt lectus. Vivamus ultricies libero non velit gravida, at luctus sem finibus.</p>
+		</div>
+		<div class="column medium-6">
+			<h3>Donec nulla velit, tempor ut velit quis</h3>
+			<p>Duis vestibulum fermentum nibh. Morbi finibus dui necmas tincidunt, id ultricies ex sollicitudin. Donec nulla velit, tem por ut velit quis, placerat tincidunt lectus. Vivamus ultricies libero non velit gravida, at luctus sem finibus.</p>
+		</div>
+	</div>
+
+	<div class="row">
+		<div class="column medium-6">
+			<h3>Donec nulla velit, tempor ut velit quis</h3>
+			<p>Duis vestibulum fermentum nibh. Morbi finibus dui necmas tincidunt, id ultricies ex sollicitudin. Donec nulla velit, tem por ut velit quis, placerat tincidunt lectus. Vivamus ultricies libero non velit gravida, at luctus sem finibus.</p>
+		</div>
+		<div class="column medium-6">
+			<h3>Donec nulla velit, tempor ut velit quis</h3>
+			<p>Duis vestibulum fermentum nibh. Morbi finibus dui necmas tincidunt, id ultricies ex sollicitudin. Donec nulla velit, tem por ut velit quis, placerat tincidunt lectus. Vivamus ultricies libero non velit gravida, at luctus sem finibus.</p>
+		</div>
+	</div>	
+
+	<div class="row column text-center">
+		<div class="">
+			<a href="" class="button">Join the Liquid community, ask questions and share knowledge</a>
+		</div>
+	</div>
+
+	<div class="row">
+		<div class="column text-center">
+			<h2>Get in Touch, we are Here to Help</h2>
+		</div>
+		<div class="column medium-4">
+		</div>
+		<div class="column medium-8">
+		</div>		
+	</div>
+
+
+	{% comment %}
 	<div class="row column">
 		<h1 class="page-heading">{{ page.title }}</h1>
 		{{ content }}
 	</div>
+	{% endcomment %}
 
 </body>
 </html>
