--- a/docs/_includes/header.html
+++ b/docs/_includes/header.html
@@ -1,7 +1,7 @@
 <div class="top-bar">
 	<div class="row column">
 		<div class="top-bar-title">
-			<a href="{{ site.baseurl }}">Liquid Documentation</a>
+			<a href="{{ site.baseurl }}/">Liquid Documentation</a>
 		</div>
 		<div class="top-bar-right">
 			<ul class="menu">
