--- a/docs/_includes/header.html
+++ b/docs/_includes/header.html
@@ -9,6 +9,7 @@
 				<li><a href="{{ site.baseurl }}/tags">Tags</a></li>
 				<li><a href="{{ site.baseurl }}/models">Models</a></li>
 				<li><a href="{{ site.baseurl }}/filters">Filters</a></li>
+				<li><a href="{{ site.baseurl }}/blueprints">Blueprints</a></li>
 			</ul>
 	  	</div>
   	</div>
