--- a/docs/_layouts/home.html
+++ b/docs/_layouts/home.html
@@ -17,68 +17,93 @@ layout: home
 		</div>
 	</div>
 
-	<div class="row column text-center">
+	<div class="row column text-center title">
 		<h2>What is Liquid?</h2>
 		<p>Liquid is a templating language. This means that we can access data from our shop (e.g product title, collection description, product images or blog posts) and output that directly to our templates. One of the main benefits is that we don't need to have any knowledge of what that data is, wejust need to know which variables we have access to in each template.</p>
 	</div>
 
 	<div class="row">
-		<div class="column medium-6">
+		<div class="column medium-4 medium-push-2">
+			<img src="images/getting-started.png" alt="Getting Started with Liquid">
 			<h3>Getting Started</h3>
 			<p>Lorem ipsum dolor sit amet, consectetur adipis cing elitnc tempor egestas lacus nec porttitor. Aliquam quam leo, vehicula ac eros ut, faucibus bibendum nibh.</p>
 			<p><a class="button">Get Started with Liquid</a></p>
 		</div>
-		<div class="column medium-6">
+		<div class="column medium-4 medium-pull-2">
+			<img src="images/documents.png" alt="Liquid Documents">
 			<h3>Documents</h3>
 			<p>Lorem ipsum dolor sit amet, consectetur adipis cing elitnc tempor egestas lacus nec porttitor. Aliquam quam leo, vehicula ac eros ut, faucibus bibendum nibh.</p>
 			<p><a class="button">View our Liquid Docs</a></p>
 		</div>
 	</div>
 
-	<div class="row column text-center">
+	<div class="row column text-center title">
 		<h2>Building your eCommerce Solution</h2>
 		<p>Morbi metus mauris, aliquam nec pellentesque mattis, luctus eu mauristiam convallis justo ligula.</p>
 	</div>
 
 	<div class="row">
 		<div class="column medium-4">
+			<img src="images/tags.png" alt="Liquid Tags">
 			<h3>Tags</h3>
 			<p>Liquid tags are used to tell the template what to do. You can control if code gets executed, repeatedly run blocks of code and create newvariables.</p>
 		</div>
 		<div class="column medium-4">
+			<img src="images/models.png" alt="Liquid Models">
 			<h3>Models</h3>
 			<p>Liquid models (or objects) contain attributes to output dynamic content on the page. Liquid models are also often referred to as Liquid variables.</p>
 		</div>	
 		<div class="column medium-4">
+			<img src="images/filters.png" alt="Liquid Filters">
 			<h3>Filters</h3>
 			<p>Liquid filters are simple methods that modify the output of numbers, strings, variables and objects. </p>
 		</div>				
 	</div>	
 
-	<div class="row column text-center">
+	<div class="row column text-center title">
 		<h2>Discuss Liquid with (us/others)</h2>
 		<p>Morbi metus mauris, aliquam nec pellentesque mattis, luctus eu mauristiam convallis justo ligula.</p>
 	</div>
 
 	<div class="row">
 		<div class="column medium-6">
-			<h3>Donec nulla velit, tempor ut velit quis</h3>
-			<p>Duis vestibulum fermentum nibh. Morbi finibus dui necmas tincidunt, id ultricies ex sollicitudin. Donec nulla velit, tem por ut velit quis, placerat tincidunt lectus. Vivamus ultricies libero non velit gravida, at luctus sem finibus.</p>
+			<div class="column medium-2">
+				<img src="images/faq.png" alt="Calendar">
+			</div>
+			<div class="columns medium-10">
+				<h3>Donec nulla velit, tempor ut velit quis</h3>
+				<p>Duis vestibulum fermentum nibh. Morbi finibus dui necmas tincidunt, id ultricies ex sollicitudin. Donec nulla velit, tem por ut velit quis, placerat tincidunt lectus. Vivamus ultricies libero non velit gravida, at luctus sem finibus.</p>
+			</div>
 		</div>
 		<div class="column medium-6">
-			<h3>Donec nulla velit, tempor ut velit quis</h3>
-			<p>Duis vestibulum fermentum nibh. Morbi finibus dui necmas tincidunt, id ultricies ex sollicitudin. Donec nulla velit, tem por ut velit quis, placerat tincidunt lectus. Vivamus ultricies libero non velit gravida, at luctus sem finibus.</p>
+			<div class="column medium-2">
+				<img src="images/faq.png" alt="Calendar">
+			</div>
+			<div class="columns medium-10">
+				<h3>Donec nulla velit, tempor ut velit quis</h3>
+				<p>Duis vestibulum fermentum nibh. Morbi finibus dui necmas tincidunt, id ultricies ex sollicitudin. Donec nulla velit, tem por ut velit quis, placerat tincidunt lectus. Vivamus ultricies libero non velit gravida, at luctus sem finibus.</p>
+			</div>
 		</div>
 	</div>
 
 	<div class="row">
 		<div class="column medium-6">
-			<h3>Donec nulla velit, tempor ut velit quis</h3>
-			<p>Duis vestibulum fermentum nibh. Morbi finibus dui necmas tincidunt, id ultricies ex sollicitudin. Donec nulla velit, tem por ut velit quis, placerat tincidunt lectus. Vivamus ultricies libero non velit gravida, at luctus sem finibus.</p>
+			<div class="column medium-2">
+				<img src="images/faq.png" alt="Calendar">
+			</div>
+			<div class="columns medium-10">
+				<h3>Donec nulla velit, tempor ut velit quis</h3>
+				<p>Duis vestibulum fermentum nibh. Morbi finibus dui necmas tincidunt, id ultricies ex sollicitudin. Donec nulla velit, tem por ut velit quis, placerat tincidunt lectus. Vivamus ultricies libero non velit gravida, at luctus sem finibus.</p>
+			</div>
 		</div>
 		<div class="column medium-6">
-			<h3>Donec nulla velit, tempor ut velit quis</h3>
-			<p>Duis vestibulum fermentum nibh. Morbi finibus dui necmas tincidunt, id ultricies ex sollicitudin. Donec nulla velit, tem por ut velit quis, placerat tincidunt lectus. Vivamus ultricies libero non velit gravida, at luctus sem finibus.</p>
+			<div class="column medium-2">
+				<img src="images/faq.png" alt="Calendar">
+			</div>
+			<div class="columns medium-10">
+				<h3>Donec nulla velit, tempor ut velit quis</h3>
+				<p>Duis vestibulum fermentum nibh. Morbi finibus dui necmas tincidunt, id ultricies ex sollicitudin. Donec nulla velit, tem por ut velit quis, placerat tincidunt lectus. Vivamus ultricies libero non velit gravida, at luctus sem finibus.</p>
+			</div>
 		</div>
 	</div>	
 
@@ -93,8 +118,14 @@ layout: home
 			<h2>Get in Touch, we are Here to Help</h2>
 		</div>
 		<div class="column medium-4">
+			<img src="images/contact.png" alt="Contact">
 		</div>
 		<div class="column medium-8">
+			<p>Lorem ipsum dolor sit amet, consectetur adipiscing elitac faucibus enim. Donec libero orci, sagittis ut mollis in, faucibus sed elit. Morbi efficitur ante luctus sapien condimentum rhoncus. </p>
+
+			<p>Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas condimentum risus eu nisl aliquet aliquam. In vel nisl aliquet, molestie ipsum quis, fringillaodio. Maecenas placerat, erat lacinia ornare auctor, ex lectus laoreet risus, et tempor leo elit ut arcu.</p>
+
+			<a href="">Contact one of the Team</a>
 		</div>		
 	</div>
 
@@ -105,6 +136,8 @@ layout: home
 		{{ content }}
 	</div>
 	{% endcomment %}
+
+	{% include footer.html %}
 
 </body>
 </html>
