added radius to card

--- a/docs/css/app.scss
+++ b/docs/css/app.scss
@@ -217,7 +217,8 @@ pre {tab-size: 4;}
 	.blueprint{
 		.card{
 			position: relative;
-
+			border-radius: 4px;
+			
 			.blueprint-link{
 				position: absolute;
 				top:0;
