--- a/docs/_layouts/home.html
+++ b/docs/_layouts/home.html
@@ -24,49 +24,59 @@ layout: home
 
 	<div class="row">
 		<div class="column medium-4 medium-push-2">
-			<img src="images/getting-started.png" alt="Getting Started with Liquid">
+			<div class="icon">
+				<img src="images/getting-started.png" alt="Getting Started with Liquid">
+			</div>
 			<h3>Getting Started</h3>
-			<p>Lorem ipsum dolor sit amet, consectetur adipis cing elitnc tempor egestas lacus nec porttitor. Aliquam quam leo, vehicula ac eros ut, faucibus bibendum nibh.</p>
+			<p>Get to grips with Liquid, it's key features and how they work in relation to theme development.</p>
 			<p><a class="button">Get Started with Liquid</a></p>
 		</div>
 		<div class="column medium-4 medium-pull-2">
-			<img src="images/documents.png" alt="Liquid Documents">
+			<div class="icon">
+				<img src="images/documents.png" alt="Liquid Documents">
+			</div>
 			<h3>Documents</h3>
-			<p>Lorem ipsum dolor sit amet, consectetur adipis cing elitnc tempor egestas lacus nec porttitor. Aliquam quam leo, vehicula ac eros ut, faucibus bibendum nibh.</p>
+			<p>Get stuck in to the nitty gritty of Liquid development with our comprehensive documentation.  </p>
 			<p><a class="button">View our Liquid Docs</a></p>
 		</div>
 	</div>
 
-	<div class="row column text-center title">
+	<div class="row column text-center title sub">
 		<h2>Building your eCommerce Solution</h2>
 		<p>Morbi metus mauris, aliquam nec pellentesque mattis, luctus eu mauristiam convallis justo ligula.</p>
 	</div>
 
 	<div class="row">
 		<div class="column medium-4">
-			<img src="images/tags.png" alt="Liquid Tags">
+			<div class="icon">
+				<img src="images/tags.png" alt="Liquid Tags">
+			</div>
 			<h3>Tags</h3>
 			<p>Liquid tags are used to tell the template what to do. You can control if code gets executed, repeatedly run blocks of code and create newvariables.</p>
 		</div>
 		<div class="column medium-4">
-			<img src="images/models.png" alt="Liquid Models">
+			<div class="icon">
+				<img src="images/models.png" alt="Liquid Models">
+			</div>
 			<h3>Models</h3>
 			<p>Liquid models (or objects) contain attributes to output dynamic content on the page. Liquid models are also often referred to as Liquid variables.</p>
 		</div>	
 		<div class="column medium-4">
-			<img src="images/filters.png" alt="Liquid Filters">
+			<div class="icon">
+				<img src="images/filters.png" alt="Liquid Filters">
+			</div>
 			<h3>Filters</h3>
 			<p>Liquid filters are simple methods that modify the output of numbers, strings, variables and objects. </p>
 		</div>				
 	</div>	
 
-	<div class="row column text-center title">
+	<div class="row column text-center title sub">
 		<h2>Discuss Liquid with (us/others)</h2>
 		<p>Morbi metus mauris, aliquam nec pellentesque mattis, luctus eu mauristiam convallis justo ligula.</p>
 	</div>
 
 	<div class="row">
-		<div class="column medium-6">
+		<div class="column medium-6 faq">
 			<div class="column medium-2">
 				<img src="images/faq.png" alt="Calendar">
 			</div>
@@ -75,7 +85,7 @@ layout: home
 				<p>Duis vestibulum fermentum nibh. Morbi finibus dui necmas tincidunt, id ultricies ex sollicitudin. Donec nulla velit, tem por ut velit quis, placerat tincidunt lectus. Vivamus ultricies libero non velit gravida, at luctus sem finibus.</p>
 			</div>
 		</div>
-		<div class="column medium-6">
+		<div class="column medium-6 faq">
 			<div class="column medium-2">
 				<img src="images/faq.png" alt="Calendar">
 			</div>
@@ -87,7 +97,7 @@ layout: home
 	</div>
 
 	<div class="row">
-		<div class="column medium-6">
+		<div class="column medium-6 faq">
 			<div class="column medium-2">
 				<img src="images/faq.png" alt="Calendar">
 			</div>
@@ -96,7 +106,7 @@ layout: home
 				<p>Duis vestibulum fermentum nibh. Morbi finibus dui necmas tincidunt, id ultricies ex sollicitudin. Donec nulla velit, tem por ut velit quis, placerat tincidunt lectus. Vivamus ultricies libero non velit gravida, at luctus sem finibus.</p>
 			</div>
 		</div>
-		<div class="column medium-6">
+		<div class="column medium-6 faq">
 			<div class="column medium-2">
 				<img src="images/faq.png" alt="Calendar">
 			</div>
@@ -113,11 +123,11 @@ layout: home
 		</div>
 	</div>
 
-	<div class="row">
+	<div class="row contact">
 		<div class="column text-center">
 			<h2>Get in Touch, we are Here to Help</h2>
 		</div>
-		<div class="column medium-4">
+		<div class="column medium-4 text-center">
 			<img src="images/contact.png" alt="Contact">
 		</div>
 		<div class="column medium-8">
@@ -125,7 +135,7 @@ layout: home
 
 			<p>Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas condimentum risus eu nisl aliquet aliquam. In vel nisl aliquet, molestie ipsum quis, fringillaodio. Maecenas placerat, erat lacinia ornare auctor, ex lectus laoreet risus, et tempor leo elit ut arcu.</p>
 
-			<a href="">Contact one of the Team</a>
+			<a href="" class="button">Contact one of the Team</a>
 		</div>		
 	</div>
 
