--- a/docs/_layouts/normal.html
+++ b/docs/_layouts/normal.html
@@ -10,10 +10,17 @@ layout: normal
 
 	{% include header.html %}
 
-	<div class="row column">
-		<h1 class="page-heading">{{ page.title }}</h1>
+	<div class="lightbg internal">
+		<div class="row column text-center">
+			<h1>{{ page.title }}</h1>
+			<p>{{ page.description }}</p>
+		</div>
+	</div>
+
+	<div class="row column normal">
 		{{ content }}
 	</div>
+
 
 </body>
 </html>
