--- a/docs/_layouts/post.html
+++ b/docs/_layouts/post.html
@@ -13,6 +13,7 @@ layout: post
 	<h1 class="page-heading">{{ page.title }}</h1>
 	{{ content }}
 
+{% include footer.html %}
 {% include footer-scripts.html %}
 
 </body>
