--- a/docs/_scss/_generic.scss
+++ b/docs/_scss/_generic.scss
@@ -65,14 +65,6 @@ a, input{
 	}
 }
 
-.example-title{
-	padding: 9px 14px;
-    background-color: #e5e5e5;
-    border: 1px solid #dddddd;
-    border-bottom:none;
-    border-radius: 4px 4px 0 0;
-}
-
 .normal{
 	h2{
 		margin-top:2rem;
@@ -123,11 +115,19 @@ a, input{
 	}
 }
 
+.example-title{
+	padding: 9px 14px;
+    background-color: #e0eef1;
+    border: 1px solid #dddddd;
+    border-bottom:none;
+    border-radius: 4px 4px 0 0;
+}
+
 .highlight{
     position: relative;
     padding: 9px 14px;
     margin-bottom: 14px;
-    background-color: #f7f7f9;
+    background-color: #f3f8f9;
     border: 1px solid #e1e1e8;
     border-radius: 0 0 4px 4px;
     overflow: auto;
