--- a/docs/_scss/_footer.scss
+++ b/docs/_scss/_footer.scss
@@ -1,6 +1,7 @@
 .footer{
 	background:#263238;
 	padding:4rem 0;
+	margin-top:4rem;
 	h3{
 		color:#fff;
 		font-weight:normal;
@@ -23,6 +24,7 @@
 		padding:.8rem .5rem;
 		margin-bottom:1rem;
 		display:block;
+		width:100%;
 	}
 }
 
