adding more models / styling changes

--- a/docs/_layouts/collection.html
+++ b/docs/_layouts/collection.html
@@ -21,7 +21,7 @@ layout: collection
 
 <div class="row content">
 
-	<div class="column medium-8 large-9 medium-push-4 large-push-3">
+	<div class="column medium-8 large-9 medium-push-4 large-push-3 mainContent">
 		{{ content }}
 	</div>
 	
