--- a/docs/_scss/_generic.scss
+++ b/docs/_scss/_generic.scss
@@ -102,6 +102,12 @@ a, input{
 						text-decoration: underline;
 					}
 				}
+				ul{
+					margin:0;
+					border-bottom:none;
+					padding-bottom:0;
+					padding-top:0;
+				}
 			}
 		}
 	}
