Adding in Building Blocks

--- a/docs/_includes/header.html
+++ b/docs/_includes/header.html
@@ -10,6 +10,7 @@
 				<li><a href="{{ site.baseurl }}/models">Models</a></li>
 				<li><a href="{{ site.baseurl }}/filters">Filters</a></li>
 				<li><a href="{{ site.baseurl }}/blueprints">Blueprints</a></li>
+				<li><a href="{{ site.baseurl }}/blocks">Building Blocks</a></li>
 			</ul>
 	  	</div>
   	</div>
