adding in registration endpoint

--- a/docs/_includes/header.html
+++ b/docs/_includes/header.html
@@ -1,16 +1,17 @@
 <div class="top-bar">
 	<div class="row column">
 		<div class="top-bar-title">
-			<a href="{{ site.baseurl }}/">Liquid Documentation</a>
+			<a href="{{ site.baseurl }}/">Liquid</a>
 		</div>
 		<div class="top-bar-right">
 			<ul class="menu">
 				<li><a href="{{ site.baseurl }}/getting-started">Getting Started</a></li>
 				<li><a href="{{ site.baseurl }}/tags">Tags</a></li>
 				<li><a href="{{ site.baseurl }}/models">Models</a></li>
+				<li><a href="{{ site.baseurl }}/endpoint">Endpoint</a></li>
 				<li><a href="{{ site.baseurl }}/filters">Filters</a></li>
 				<li><a href="{{ site.baseurl }}/blueprints">Blueprints</a></li>
-				<li><a href="{{ site.baseurl }}/blocks">Building Blocks</a></li>
+				<!--<li><a href="{{ site.baseurl }}/blocks">Building Blocks</a></li>-->
 			</ul>
 	  	</div>
   	</div>
