--- a/docs/_layouts/home.html
+++ b/docs/_layouts/home.html
@@ -19,7 +19,7 @@ layout: home
 
 	<div class="row column text-center title">
 		<h2>What is Liquid?</h2>
-		<p>Liquid is a templating language. This means that we can access data from our shop (e.g product title, collection description, product images or blog posts) and output that directly to our templates. One of the main benefits is that we don't need to have any knowledge of what that data is, wejust need to know which variables we have access to in each template.</p>
+		<p>Liquid is a templating language. This means that we can access data from our shop (e.g product title, collection description, product images or blog posts) and output that directly to our templates. One of the main benefits is that we don't need to have any knowledge of what that data is, we just need to know which variables we have access to in each template.</p>
 	</div>
 
 	<div class="row">
@@ -29,15 +29,15 @@ layout: home
 			</div>
 			<h3>Getting Started</h3>
 			<p>Get to grips with Liquid, it's key features and how they work in relation to theme development.</p>
-			<p><a class="button">Get Started with Liquid</a></p>
+			<p><a href="/liquid-docs/getting-started/" class="button">Get Started with Liquid</a></p>
 		</div>
 		<div class="column medium-4 medium-pull-2">
 			<div class="icon">
 				<img src="images/documents.png" alt="Liquid Documents">
 			</div>
-			<h3>Documents</h3>
-			<p>Get stuck in to the nitty gritty of Liquid development with our comprehensive documentation.  </p>
-			<p><a class="button">View our Liquid Docs</a></p>
+			<h3>Blueprints</h3>
+			<p>We have done the hard work in creating as many code blocks as possible so that you do not have to.</p>
+			<p><a href="/liquid-docs/blueprints/" class="button">View our Blueprints</a></p>
 		</div>
 	</div>
 
@@ -45,7 +45,6 @@ layout: home
 		<h2>Building your eCommerce Solution</h2>
 		<p>Morbi metus mauris, aliquam nec pellentesque mattis, luctus eu mauristiam convallis justo ligula.</p>
 	</div>
-
 	<div class="row">
 		<div class="column medium-4">
 			<div class="icon">
@@ -69,7 +68,6 @@ layout: home
 			<p>Liquid filters are simple methods that modify the output of numbers, strings, variables and objects. </p>
 		</div>				
 	</div>	
-
 	<div class="row column text-center title sub">
 		<h2>Discuss Liquid with (us/others)</h2>
 		<p>Morbi metus mauris, aliquam nec pellentesque mattis, luctus eu mauristiam convallis justo ligula.</p>
